--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "milkshake-web",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -39,6 +40,5 @@
     "plop": "^2.7.4",
     "prettier": "^2.3.0",
     "typescript": "4.2.3"
-  },
-  "license": "MIT"
+  }
 }
