--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
+  "typescript.format.semicolons": "insert",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
   }
