--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "milkshake-web",
-  "version": "1.0.2",
-  "license": "MIT",
+  "version": "2.0.0",
+  "private": false,
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --max-warnings=0",
+    "lint": "next lint",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "generate": "yarn plop --plopfile generators/plopfile.js"
   },
@@ -17,21 +17,16 @@
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
     "framer-motion": "4.1.11",
-    "next": "latest",
-    "next-pwa": "^5.2.21",
+    "next": "12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-typescript": "^7.13.0",
-    "@emotion/babel-plugin": "^11.3.0",
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
-    "babel-loader": "^8.2.2",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
