--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,3 @@
 {
-  // configure eslint with stylelint
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "react-hooks",
-    "prettier"
-  ]
+  "extends": "next/core-web-vitals"
 }
