--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "milkshake-web",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "private": false,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -25,13 +26,8 @@
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-next": "12.1.6",
     "plop": "^2.7.4",
     "prettier": "^2.3.0",
     "typescript": "4.2.3"
