--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "next lint",
 		"lint:prettier": "prettier -w .",
 		"typecheck": "tsc --project tsconfig.json --noEmit",
-		"generate": "yarn plop --plopfile generators/plopfile.js"
+		"generate": "plop --plopfile generators/plopfile.js"
 	},
 	"dependencies": {
 		"@chakra-ui/icons": "^1.0.5",
@@ -31,6 +31,6 @@
 		"eslint-config-next": "12.1.6",
 		"plop": "^2.7.4",
 		"prettier": "^2.3.0",
-		"typescript": "4.2.3"
+		"typescript": "^4.6.4"
 	}
 }
