--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"framer-motion": "4.1.11",
 		"next": "12.1.5",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1"
 	},
 	"devDependencies": {
 		"@types/node": "^14.6.0",
@@ -29,7 +30,7 @@
 		"@types/react-dom": "^17.0.3",
 		"eslint": "^7.26.0",
 		"eslint-config-next": "12.1.6",
-		"plop": "^2.7.4",
+		"plop": "^3.1.0",
 		"prettier": "^2.3.0",
 		"typescript": "^4.6.4"
 	}
