lint code style

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,26 @@
 {
-	"trailingComma": "es5",
+	"$schema": "http://json.schemastore.org/prettierrc",
+	"endOfLine": "lf",
+	"printWidth": 150,
+	"quoteProps": "as-needed",
 	"semi": true,
-	"tabWidth": 4,
 	"singleQuote": true,
-	"printWidth": 100
+	"tabWidth": 4,
+	"trailingComma": "none",
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": ".all-contributorsrc",
+			"options": {
+				"parser": "json"
+			}
+		},
+		{
+			"files": "*.yml",
+			"options": {
+				"tabWidth": 2,
+				"useTabs": false
+			}
+		}
+	]
 }
