fix eslint error temply.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,6 @@
 		"next/core-web-vitals"
 	],
 	"rules": {
-		"no-unused-vars": [
-			"error",
-			{
-				"vars": "all",
-				"args": "after-used",
-				"ignoreRestSiblings": false
-			}
-		]
+		"react-hooks/exhaustive-deps": "off"
 	}
 }
