--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"next": "12.1.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-draggable": "^4.4.5",
 		"react-icons": "^4.3.1",
 		"react-loader-spinner": "^6.0.0-0"
 	},
