--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,5 @@
 	"display": "fullscreen",
 	"start_url": "/",
 	"background_color": "#181716",
-	"theme_color": "#000"
+	"theme_color": "#ffa3c8"
 }
